# ChangeLog for dev-libs/libgdata
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgdata/ChangeLog,v 1.26 2011/03/16 10:11:45 nirbheek Exp $

  16 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org> libgdata-0.6.4.ebuild,
  libgdata-0.6.5.ebuild, libgdata-0.6.6.ebuild, libgdata-0.8.0.ebuild:
  Fix slot-deps on gtk+ and other libs

  12 Mar 2011; Raúl Porcel <armin76@gentoo.org> libgdata-0.8.0.ebuild:
  alpha/arm/ia64/sparc stable wrt #353436

  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> libgdata-0.8.0.ebuild:
  x86 stable per bug 353436

  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> libgdata-0.8.0.ebuild:
  Stable on amd64 wrt bug #353436

  10 Feb 2011; Pacho Ramos <pacho@gentoo.org> libgdata-0.8.0.ebuild:
  Fix introspection deps (bug #354353 by Nguyen Thai Ngoc Duy).

  23 Jan 2011; Gilles Dartiguelongue <eva@gentoo.org> libgdata-0.6.6.ebuild:
  Fix tests applying fix from 0.8, bug #348926.

*libgdata-0.8.0 (13 Jan 2011)

  13 Jan 2011; Gilles Dartiguelongue <eva@gentoo.org> +libgdata-0.8.0.ebuild:
  Version bump.

*libgdata-0.6.6 (15 Dec 2010)

  15 Dec 2010; Gilles Dartiguelongue <eva@gentoo.org> +libgdata-0.6.6.ebuild:
  Version bump. Fix memory leaks, various xml handling problems and
  asynchronous authentication success notification.

  24 Oct 2010; Pacho Ramos <pacho@gentoo.org> libgdata-0.6.4.ebuild,
  libgdata-0.6.5.ebuild:
  Stop RDEPENDing on net-libs/libsoup[gnome] since it will be dropped in
  favor of net-libs/libsoup-gnome (see bug #340293 for reference).

  14 Oct 2010; Markus Meier <maekke@gentoo.org> libgdata-0.6.4.ebuild:
  arm stable, bug #324077

  07 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> libgdata-0.6.4.ebuild:
  ppc64 stable wrt #314899

*libgdata-0.6.5 (04 Oct 2010)

  04 Oct 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -libgdata-0.6.2.ebuild, +libgdata-0.6.5.ebuild, metadata.xml: