@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/totem-pl-parser
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/totem-pl-parser/ChangeLog,v 1.87 2011/03/18 17:01:08 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/totem-pl-parser/ChangeLog,v 1.88 2011/03/21 21:24:31 xarthisius Exp $
+
+  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
+  totem-pl-parser-2.32.3.ebuild:
+  ppc64 stable wrt #353436
 
   18 Mar 2011; Pacho Ramos <pacho@gentoo.org> totem-pl-parser-2.32.3.ebuild,
   totem-pl-parser-2.32.3-r1.ebuild:
