@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libgdata
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgdata/ChangeLog,v 1.26 2011/03/16 10:11:45 nirbheek Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgdata/ChangeLog,v 1.27 2011/03/21 21:23:55 xarthisius Exp $
+
+  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> libgdata-0.8.0.ebuild:
+  ppc64 stable wrt #353436
 
   16 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org> libgdata-0.6.4.ebuild,
   libgdata-0.6.5.ebuild, libgdata-0.6.6.ebuild, libgdata-0.8.0.ebuild:
